Add AddEmployee and AddRoom

--- a/Hotel Management System/.project
+++ b/Hotel Management System/.project
@@ -3,6 +3,7 @@
 	<name>Hotel Management System</name>
 	<comment></comment>
 	<projects>
+		<project>mysql-connector-java</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
